ScrollBar fix for Macs

--- a/canvashs-client/css/main.css
+++ b/canvashs-client/css/main.css
@@ -11,9 +11,11 @@ html,body {
     margin: 0px;
     padding: 0px;
 }
+
 body {
     background-color: #EFECDD;
 }
+
 #wrapper {
     position: relative;
     height: 100%;
@@ -21,9 +23,11 @@ body {
     min-height: 600px;
     overflow: hidden;
 }
+
 .fullwindow #wrapper {
     width: 100%;
 }
+
 #canvas {
     background: #f8f7f0;
 
@@ -34,6 +38,7 @@ body {
     left: 50%;
     position: absolute;
 }
+
 .fullwindow #canvas {
     border: 0px solid #FFFFFF;
     top: 0;
@@ -42,6 +47,7 @@ body {
     height: 100%;
     margin: 0px;
 }
+
 #control-wrapper {
     top: 0px;
     left: 0px;
@@ -57,11 +63,13 @@ body {
     -o-transition: 0.5s ease;
     transition: 0.5s ease;
 }
+
 #control-wrapper.display {
     height: 100%;
     opacity: 1;
     -webkit-transition: opacity 1s ease-out;
 }
+
 #control-window {
     /*http://www.colourlovers.com/palette/3098000/Precious_Time*/
     color: #15CAB1;
@@ -84,6 +92,7 @@ body {
     -o-transition: 0.5s ease;
     transition: 0.5s ease;
 }
+
 #control-window div.control-content {
     display: table;
     margin: 0px;
@@ -93,20 +102,22 @@ body {
     border-bottom: #6AB1A9 3px solid;
     width: 100%;
 }
+
 #control-window.display {
     height: 83px;
     margin-top: -40px;
     opacity: 1;
 }
+
 #control-window strong {
     color: #3C252F;
 }
+
 #control-window p {
   display: table-cell; 
   vertical-align: middle; 
   text-align: center; 
 }
-
 
 #debug {
 
@@ -134,6 +145,37 @@ body {
     text-decoration: underline;
     cursor: pointer;
 }
+
+/* ==========================================================================
+   Scrollbar fix for Macs
+   ========================================================================== */
+
+body::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+body::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+
+body::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, .5);
+}
+
+body::-webkit-scrollbar-track { 
+    background-color: #fff; 
+    border-radius: 8px; 
+} 
+
+/* ==========================================================================
+   Normalize
+   ========================================================================== */
 
 /* hide the helper input */
 input[type=file], #fileUpload {
